fix: Wrap items in methods list

--- a/src/app/main.css
+++ b/src/app/main.css
@@ -372,6 +372,8 @@ body, html {
     justify-content: center;
     height: auto;
     margin-bottom: 5%;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 
 .methods>li {
